// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title 1`] = `
<header
  className=""
>
  <h1
    className="cf-10h3ujg"
  >
    Title
  </h1>
</header>
`;

exports[`should render title/subtitle 1`] = `
<header
  className=""
>
  <h1
    className="cf-10h3ujg"
  >
    Title
  </h1>
  <h2
    className="cf-jjd3ph"
  >
    Subtitle
  </h2>
</header>
`;
